<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/tv_heading"
        android:layout_width="@dimen/login_heading_width"
        android:layout_height="wrap_content"
        android:text="@string/login_screen_heading_text"
        android:layout_marginTop="@dimen/login_margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:textSize="@dimen/text_sz_extra_large"
        android:textColor="@color/color_green_lite"
        />
    
    <EditText
        android:id="@+id/et_email"
        android:layout_below="@+id/tv_heading"
        android:layout_width="@dimen/login_heading_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:hint="@string/email_edit_text"
        android:textColorHint="@color/color_green_lite"
        android:textColor="@color/color_black"
        />
    <EditText
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email"
        android:layout_width="@dimen/login_heading_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:hint="@string/email_password_text"
        android:textColorHint="@color/color_green_lite"
        android:textColor="@color/color_black"
        android:inputType="textPassword"

        />

    <ImageView
        android:id="@+id/iv_password"
        android:layout_below="@+id/et_email"
        android:layout_width="@dimen/margin_large"
        android:layout_height="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_ic_eye"
        android:layout_alignRight="@+id/et_password"
        android:background="@drawable/ic_show_pass"
        android:onClick="ShowHidePass"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_below="@+id/iv_password"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_width="@dimen/login_heading_width"
        android:layout_height="70dp"
        android:textAllCaps="false"
        android:text="@string/login_button_text"
        android:textColor="@color/color_white"
        android:background="@drawable/round_button"/>

    <TextView
        android:id="@+id/tv_bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_login"
        android:layout_marginTop="@dimen/register_margin_extra_large"
        android:layout_centerHorizontal="true"
        android:text="@string/register_button_text"
        android:textSize="@dimen/text_sz_small"
        android:textColor="@color/color_green_lite"
        />
</RelativeLayout>